--- a/nutriveda-frontend/Untitled50.ipynb
+++ b/nutriveda-frontend/Untitled50.ipynb
@@ -32,7 +32,7 @@
         "import google.generativeai as genai\n",
         "\n",
         "# Put your Gemini API key here\n",
-        "os.environ[\"GEMINI_API_KEY\"] = \"AIzaSyBkewIzUIMcjUKC3YBq0XTZCFt39BVkzdQ\"\n",
+        "os.environ[\"GEMINI_API_KEY\"] = \"\"\n",
         "\n",
         "# Configure client\n",
         "genai.configure(api_key=os.environ[\"GEMINI_API_KEY\"])\n"
